@@ -26,7 +26,7 @@ def hnd_magic(line,mo):
     var = mo.group('varname')
     cmd = mo.group('cmd')
     expr = make_quoted_expr(cmd)
-    return itpl('$var = ipmagic($expr)')
+    return itpl('$var = _ip.magic($expr)')
 
 def hnd_syscmd(line,mo):
     """ Handle a = !ls """
@@ -36,7 +36,7 @@ def hnd_syscmd(line,mo):
     var = mo.group('varname')
     cmd = mo.group('cmd')
     expr = make_quoted_expr(itpl("sc -l =$cmd"))
-    return itpl('$var = ipmagic($expr)')
+    return itpl('$var = _ip.magic($expr)')
 
 def install_re_handler(pat, hnd):
     ip.meta().re_prefilters.append((re.compile(pat), hnd))
